--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -9,6 +9,6 @@
 Text:<span th:text="${message.text}"></span><br/>
 Date:<span th:text="${message.date}"></span><br/>
 Sent by:<span th:text="${message.sentBy}"></span><br/>
-<a th:href="@{/delete/{id}(id=${message.id})}">Delete this message</a>
+<!--<a th:href="@{/delete/{id}(id=${message.id})}">Delete this message</a>-->
 </body>
 </html>
