--- a/src/main/resources/templates/messageList.html
+++ b/src/main/resources/templates/messageList.html
@@ -22,7 +22,7 @@
             <ul class="nav navbar-nav ml-auto">
                 <li class="nav-item text-light">
                     <span class="nav-link text-white"
-                          th:text="${'Welcome, ' + user.firstName + ' ' + user.lastName + '!'}"></span>
+                          th:text="${'Welcome, ' + user.firstName + '!'}"></span>
                 </li>
 
                 <li class="nav-item text-light active">
