--- a/src/main/resources/templates/addMessage.html
+++ b/src/main/resources/templates/addMessage.html
@@ -66,12 +66,13 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
-
+<div th:replace="base :: footer"></div>
 <footer class="navbar navbar navbar-expand-lg navbar-light bg-dark fixed-bottom">
     <span class="mr-auto"></span>
     <div class="text-muted">
         <h6>© 2018 Irina Smirnova</h6>
     </div>
 </footer>
+
 </body>
 </html>
