--- a/src/main/resources/templates/messageList.html
+++ b/src/main/resources/templates/messageList.html
@@ -71,7 +71,7 @@
         </table>
     </div>
 </div>
-
+<div th:replace="base :: footer"></div>
 <footer class="navbar navbar navbar-expand-lg navbar-light bg-dark fixed-bottom">
     <span class="mr-auto"></span>
     <div class="text-muted">
