--- a/src/main/resources/templates/addUser.html
+++ b/src/main/resources/templates/addUser.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>User Register</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
+
 <form action="#"
       th:action="@{/processUser}"
       th:object="${user}"
@@ -34,5 +37,7 @@
     <br/>
     <input type="submit" value="Submit"/>
 </form>
+
+<div th:replace="base :: footer"></div>
 </body>
 </html>
