--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -65,6 +65,8 @@
 
                 </td>
             </tr>
+
+
             </tbody>
         </table>
     </div>
@@ -80,5 +82,6 @@
         <h6>© 2018 Irina Smirnova</h6>
     </div>
 </footer>
+<div th:replace="base :: footer"></div>
 </body>
 </html>
