--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Base</title>
@@ -12,6 +13,48 @@
     <a href="/register">addUser</a>
     <a href="/login">login</a>
 </div>
-<div th:fragment="footer">copyright 2018</div>
+
+<div th:fragment="menubar">
+    <nav class="navbar navbar navbar-expand-lg navbar-light bg-dark">
+        <a class="navbar-brand text-white" href="/">Messaging App</a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="nav navbar-nav ml-auto">
+                <li sec:authorize="isAuthenticated()" class="nav-item text-light">
+                    <span class="nav-link text-white"
+                          th:text="${'Welcome, ' + user?.firstName + ' ' + user?.lastName + '!'}"></span>
+                </li>
+                <li class="nav-item text-light active">
+                    <a class="nav-link text-white" href="/">Home</a>
+                </li>
+                <li sec:authorize="isAnonymous()" class="nav-item text-light">
+                    <a class="nav-link text-white" href="/login">Login</a>
+                </li>
+                <li sec:authorize="isAnonymous()" class="nav-item text-light">
+                    <a class="nav-link text-white" href="/register">Register</a>
+                </li>
+                <li sec:authorize="isAuthenticated()" class="nav-item text-light">
+                    <a class="nav-link text-white" href="/addMessage">New Message</a>
+                </li>
+                <li sec:authorize="isAuthenticated()" class="nav-item text-light">
+                    <a class="nav-link text-white" href="/logout">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
+
+<footer th:fragment="footer" class="navbar navbar navbar-expand-lg navbar-light bg-dark fixed-bottom">
+    <span class="mr-auto"></span>
+    <div class="text-muted">
+        <h6>© 2018</h6>
+    </div>
+</footer>
+
 </body>
 </html>
