--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,47 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>index</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+    <!--<style>
+        body {
+            background-image: url("/images/JBnDzi.jpg");
+            background-size: cover;
+        }
+    </style>-->
 </head>
 <body>
-
-<!-- Nav header -->
-<div>
-    <nav class="navbar navbar navbar-expand-lg navbar-light bg-dark">
-        <a class="navbar-brand text-white" href="/">Messaging App</a>
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="nav navbar-nav ml-auto">
-                <li class="nav-item text-light active">
-                    <a class="nav-link text-white" href="/">Home</a>
-                </li>
-
-                <li class="nav-item text-light">
-                    <a class="nav-link text-white" href="/login">Login</a>
-                </li>
-                <li class="nav-item text-light">
-                    <a class="nav-link text-white" href="/register">Register</a>
-                </li>
-
-            </ul>
-        </div>
-    </nav>
-</div>
+<div th:replace="base :: menubar"></div>
 
 <h2>Welcome to Messaging Application!</h2>
 <div th:if="${param.logout}" class="alert alert-info" role="alert">
     You have been logged out
 </div>
+
 <div class="container">
     <h2 class="text-center py-3 pl-4 pr-5">List of Messages</h2>
     <div align="center">
@@ -59,7 +39,7 @@
                 <td th:text="${message.text}"></td>
                 <td th:text="${message.sentBy}"></td>
                 <td th:text="${message.date}"></td>
-                <td>
+                <td sec:authorize="isAuthenticated()">
 
                     <a th:href="@{/detail/{id}(id=${message.id})}">Details</a> -
 
@@ -72,16 +52,11 @@
     </div>
 </div>
 
-<a href = "/login">Login</a>
-<a href = "/register">Register</a>
-<a href = "/messages">Messages</a>
+<a href="/login">Login</a>
+<a href="/register">Register</a>
+<a href="/messages">Messages</a>
 
-<footer class="navbar navbar navbar-expand-lg navbar-light bg-dark fixed-bottom">
-    <span class="mr-auto"></span>
-    <div class="text-muted">
-        <h6>© 2018 Irina Smirnova</h6>
-    </div>
-</footer>
 <div th:replace="base :: footer"></div>
+
 </body>
 </html>
