--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,27 +8,10 @@
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
+<div th:replace="base :: menubar"></div>
 
-<!-- Nav header -->
-<div>
-    <nav class="navbar navbar navbar-expand-lg navbar-light bg-dark">
-        <a class="navbar-brand text-white" href="/">Messaging App</a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="nav navbar-nav ml-auto">
-                <li class="nav-item text-light active">
-                    <a class="nav-link text-white" href="/">Home</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</div>
-
+<!--
 <h1>Login Page</h1>
 <div th:if="${param.error}">
     Invalid username or password
@@ -36,15 +19,15 @@
 <div th:if="${param.logout}">
     You have been logged out
 </div>
-<form th:action="@{/login}" method="post">
-    <div><label>User name: <input type="text" name="username"/></label></div>
-    <div><label>Password: <input type="password" name="password"/></label></div>
-    <div><input type="submit" value="Sign in"/></div>
+-->
+<!--<form th:action="@{/login}" method="post">-->
+    <!--<div><label>User name: <input type="text" name="username"/></label></div>-->
+    <!--<div><label>Password: <input type="password" name="password"/></label></div>-->
+    <!--<div><input type="submit" value="Sign in"/></div>-->
 
-</form>
-<a href="/register">New User</a><br/>
+<!--</form>-->
 
-<!--<div class="container bg-light">
+<div class="container bg-light">
     <h2>Login Information</h2>
 
     <div th:if="${param.error}" class="alert alert-danger" role="alert">
@@ -65,15 +48,13 @@
             <input type="password" name="password" class="form-control" id="inputPassword" placeholder="Password">
         </div>
 
+        <hr/>
+
         <button type="submit" class="btn btn-primary">Sign In</button>
     </form>
-</div>-->
+</div>
+
 <div th:replace="base :: footer"></div>
-<footer class="navbar navbar navbar-expand-lg navbar-light bg-dark fixed-bottom">
-    <span class="mr-auto"></span>
-    <div class="text-muted">
-        <h6>© 2018 Irina Smirnova</h6>
-    </div>
-</footer>
+
 </body>
 </html>
