--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,13 +17,17 @@
 <body>
 <div th:replace="base :: menubar"></div>
 
-<h2>Welcome to Messaging Application!</h2>
+<div class="container">
+    <h1 class="text-center">Welcome to Messaging App!</h1>
+</div>
+
 <div th:if="${param.logout}" class="alert alert-info" role="alert">
     You have been logged out
 </div>
 
 <div class="container">
-    <h2 class="text-center py-3 pl-4 pr-5">List of Messages</h2>
+    <h2 class="text-center py-3 pl-4 pr-5">All Messages</h2>
+
     <div align="center">
         <table class="table table-hover">
             <thead>
@@ -40,21 +44,23 @@
                 <td th:text="${message.sentBy}"></td>
                 <td th:text="${message.date}"></td>
                 <td sec:authorize="isAuthenticated()">
+                    <a th:href="@{/detail/{id}(id=${message.id})}">Details</a>
+                    <a sec:authorize="hasAuthority('USER')" th:if="${message.owner == user}"
+                       th:href="@{/delete/{id}(id=${message.id})}">Delete</a>
 
-                    <a th:href="@{/detail/{id}(id=${message.id})}">Details</a> -
-
+                    <a sec:authorize="hasAuthority('ADMIN')" th:href="@{/delete/{id}(id=${message.id})}">[Delete]</a>
                 </td>
             </tr>
-
-
             </tbody>
         </table>
     </div>
-</div>
 
-<a href="/login">Login</a>
-<a href="/register">Register</a>
-<a href="/messages">Messages</a>
+
+    <a sec:authorize="isAuthenticated()" class="btn btn-secondary" th:href="@{/messages}" role="button">
+        My Messages
+    </a>
+    <a class="btn btn-secondary" th:href="@{/addMessage}" role="button">New Message</a>
+</div>
 
 <div th:replace="base :: footer"></div>
 
