--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -26,8 +26,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="nav navbar-nav ml-auto">
                 <li sec:authorize="isAuthenticated()" class="nav-item text-light">
-                    <span class="nav-link text-white"
-                          th:text="${'Welcome, ' + user?.firstName + ' ' + user?.lastName + '!'}"></span>
+                    <a class="btn btn-secondary" th:href="@{/updateProfile/{id}(id=${user?.id})}"
+                          th:text="${'Welcome, ' + user?.firstName + '!'}"></a>
                 </li>
                 <li class="nav-item text-light active">
                     <a class="nav-link text-white" href="/">Home</a>
