--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,6 +33,7 @@
             <thead>
             <tr>
                 <th scope="col">Content</th>
+                <th scope="col"></th>
                 <th scope="col">Sent By</th>
                 <th scope="col">Date</th>
                 <th scope="col"></th>
@@ -41,6 +42,9 @@
             <tbody>
             <tr th:each="message: ${messages}">
                 <td th:text="${message.text}"></td>
+                <td>
+                    <img th:src="*{message.owner.getGravatarUrl() + '&s=24'}"/>
+                </td>
                 <td sec:authorize="isAnonymous()" th:text="${message.owner.firstName + ' ' + message.owner.lastName}"></td>
                 <td sec:authorize="isAuthenticated()">
                     <a th:href="@{/detailProfile/{id}(id=${message.owner.id})}"
@@ -67,6 +71,16 @@
 </div>
 
 <div th:replace="base :: footer"></div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
