--- a/src/main/resources/templates/messageList.html
+++ b/src/main/resources/templates/messageList.html
@@ -6,7 +6,7 @@
     <title>Messages</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          inte      g       rity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
 <div th:replace="base :: menubar"></div>
@@ -23,6 +23,7 @@
             <thead>
             <tr>
                 <th scope="col">Content</th>
+                <th scope="col"></th>
                 <th scope="col">Sent By</th>
                 <th scope="col">Date</th>
                 <th scope="col"></th>
@@ -31,7 +32,11 @@
             <tbody>
             <tr th:each="message: ${messages}">
                 <td th:text="${message.text}"></td>
-                <td th:text="${message.sentBy}"></td>
+                <td><img th:src="*{message.owner.getGravatarUrl() + '&s=24'}"/></td>
+                <td>
+                    <a th:href="@{/detailProfile/{id}(id=${message.owner.id})}"
+                       th:text="${message.owner.firstName + ' ' + message.owner.lastName}"></a>
+                </td>
                 <td th:text="${message.date}"></td>
                 <td sec:authorize="isAuthenticated()">
                     <a th:href="@{/update/{id}(id=${message.id})}">Update</a> -
@@ -48,7 +53,6 @@
 </div>
 
 <div th:replace="base :: footer"></div>
-
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
