--- a/src/main/resources/templates/showProfile.html
+++ b/src/main/resources/templates/showProfile.html
@@ -1,10 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>User Profile</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
+<div th:replace="base :: menubar"></div>
+
+<div class="container">
+    <h2 class="text-center py-3">User Profile</h2>
+
+    <div align="center" th:object="${user}">
+        <div class="form-group row">
+            <label for="userFirstName" class="col-sm-2 col-form-label col-form-label-sm">First Name:</label>
+            <div class="col-sm-10">
+                <input type="text" th:value="*{firstName}" class="form-control form-control-sm" id="userFirstName"
+                       disabled>
+            </div>
+
+            <label for="userLastName" class="col-sm-2 col-form-label col-form-label-sm">Last Name:</label>
+            <div class="col-sm-10">
+                <input type="text" th:value="*{lastName}" class="form-control form-control-sm" id="userLastName"
+                       disabled>
+            </div>
+
+            <label for="userEmail" class="col-sm-2 col-form-label col-form-label-sm">EMail:</label>
+            <div class="col-sm-10">
+                <input type="text" th:value="*{email}" class="form-control form-control-sm" id="userEmail"
+                       disabled>
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label for="userIntro" class="col-sm-2 col-form-label col-form-label-sm">Introduction:</label>
+
+            <div class="row col-sm-10">
+                <div class="col-md-10">
+                    <textarea type="text" th:text="*{intro}" class="form-control form-control-sm py-3" id="userIntro"
+                              rows="3" disabled></textarea>
+                </div>
+                <div class="form-group col-md-2">
+                    <img th:src="*{getGravatarUrl()}">
+                </div>
+            </div>
+        </div>
+
+        <hr/>
+
+        <div class="form-group row">
+            <a class="btn btn-secondary" th:href="@{/}" role="button">All Messages</a>&nbsp;
+            <a class="btn btn-secondary" th:href="@{/messages}" role="button">My Messages</a>&nbsp;
+            <!--<a class="btn btn-secondary" th:href="@{/addMessage}" role="button">New Message</a>-->
+        </div>
+    </div>
+</div>
+
+<div th:replace="base :: footer"></div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
