--- a/src/main/resources/templates/addUser.html
+++ b/src/main/resources/templates/addUser.html
@@ -9,7 +9,7 @@
 <body>
 <div th:replace="base :: menubar"></div>
 
-<div class="container bg-light">
+<div class="container bg-light py-5">
     <h2>Register New User</h2>
 
     <form th:action="@{/processUser}"
