--- a/src/main/resources/templates/addMessage.html
+++ b/src/main/resources/templates/addMessage.html
@@ -36,6 +36,7 @@
         <div class="form-group">
             <label for="inputHashtags">Hashtags:</label>
             <input th:field="*{hashtags}" type="text" class="form-control" id="inputHashtags">
+            <small class="font-weight-light">Comma-separated list of hashtags, i.e. tag1,tag2,tag3 etc.</small>
         </div>
 
         <label for="inputOwner">Sent By:</label>
