--- a/src/main/resources/templates/messageList.html
+++ b/src/main/resources/templates/messageList.html
@@ -16,7 +16,7 @@
 </div>
 
 <div class="container">
-    <h2 class="text-center py-3 pl-4 pr-5">List of My Messages</h2>
+    <h3 class="text-center py-3 pl-4 pr-5">My Messages</h3>
 
     <div align="center">
         <table class="table table-hover">
@@ -41,7 +41,7 @@
                 <td th:text="${message.date}"></td>
                 <td>
                     <span th:each="hashtag: ${message.hashtags.split(',')}">
-                        <a class="badge badge-info" th:text="${hashtag}" href="#"></a>
+                        <span class="badge badge-info" th:text="${hashtag}"></span>
                     </span>
                 </td>
                 <td sec:authorize="isAuthenticated()">
