--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="nav navbar-nav ml-auto">
                 <li sec:authorize="isAuthenticated()" class="nav-item text-light">
-                    <a class="btn btn-secondary" th:href="@{/updateProfile/{id}(id=${user?.id})}"
+                    <a class="btn btn-secondary" th:href="@{/updateProfile}"
                           th:text="${'Welcome, ' + user?.firstName + '!'}"></a>
                 </li>
                 <li class="nav-item text-light active">
