--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Show</title>
@@ -7,10 +7,64 @@
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-<a href="/">Show All Messages</a><br/>
-Text:<span th:text="${message.text}"></span><br/>
-Date:<span th:text="${message.date}"></span><br/>
-Sent by:<span th:text="${message.sentBy}"></span><br/>
-<!--<a th:href="@{/delete/{id}(id=${message.id})}">Delete this message</a>-->
+<div th:replace="base :: menubar"></div>
+
+<div class="container">
+    <h2 class="text-center py-3">Message Details</h2>
+    <div align="center" th:object="${message}">
+        <div class="form-group row">
+
+            <label for="messageText" class="col-sm-2 col-form-label col-form-label-sm">Message text:</label>
+            <div class="col-sm-10">
+                <input type="text" th:value="*{text}" class="form-control form-control-sm" id="messageText"
+                       disabled>
+            </div>
+
+            <label for="messageDate" class="col-sm-2 col-form-label col-form-label-sm">Message date:</label>
+            <div class="col-sm-10">
+                <input type="text" th:value="*{date}" class="form-control form-control-sm" id="messageDate"
+                       disabled>
+            </div>
+
+            <label for="messageSentBy" class="col-sm-2 col-form-label col-form-label-sm">Message sent by:</label>
+            <div class="col-sm-10">
+                <input type="text" th:value="*{owner.firstName + ' ' + owner.lastName}"
+                       class="form-control form-control-sm" id="messageSentBy"
+                       disabled>
+            </div>
+
+            <label class="col-sm-2 col-form-label col-form-label-sm">Message hashtags:</label>
+            <div class="pl-3">
+                <span th:each="hashtag: ${message.hashtags.split(',')}">
+                        <span class="badge badge-info" th:text="${hashtag}"></span>
+                    </span>
+<!--
+                <input type="text" th:value="*{hashtags}"
+                       class="form-control form-control-sm" id="messageHashtag"
+                       disabled>
+-->
+            </div>
+
+        </div>
+        <div class="form-group row">
+            <a class="btn btn-secondary" th:href="@{/}" role="button">All Messages</a>&nbsp;
+            <!--<a class="btn btn-secondary" th:href="@{/addMessage}" role="button">New Message</a>-->
+        </div>
+
+    </div>
+</div>
+
+<div th:replace="base :: footer"></div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+
 </body>
 </html>
